2008-04-12  Sven Joachim  <svenjoac@gmx.de>

	* scripts/Dpkg/Source/Package.pm: Add missing import of
	subprocerr.

2008-04-08  Guillem Jover  <guillem@debian.org>

	* configure.ac: Release 1.14.18.

2008-04-08  Guillem Jover  <guillem@debian.org>

	* doc/triggers.txt: Fix wrong dpkg trigger related option names.

2008-04-08  Guillem Jover  <guillem@debian.org>

	* doc/triggers.txt: Move parts of the document into proper man pages.
	Add references to those.

2008-04-05  Raphael Hertzog  <hertzog@debian.org>

	* scripts/Dpkg/Source/Package/V1_0.pm: Do not use
	diff -p to generate patches as dpkg-source of sarge doesn't accept
	data after the @@.

2008-04-04  Raphael Hertzog  <hertzog@debian.org>

	* scripts/Dpkg/Shlibs/SymbolFile.pm (get_smallest_version): New
	function to retrieve the smallest "minver" of all symbols of a
	given library.
	* scripts/dpkg-shlibdeps.pl: Do not initialize dependencies of
	libraries with symbols files as unversioned, instead use the
	smallest minimal version returned by the function above. This
	is required because the library might not have always been
	available in the package and the unversioned dependency thus
	doesn't ensure his presence.

	* scripts/t/800_Dpkg_IPC.t: Remove temporary files used by the
	tests.

2008-04-02  Sven Joachim  <svenjoac@gmx.de>

	* lib/triglib.c (trk_unknown_interest_change): Fix typo.
	* dselect/helpmsgs.cc (hlp_displayexplain1): Ditto.

2008-04-02  Raphael Hertzog  <hertzog@debian.org>

	* scripts/Dpkg/Source/Package.pm, scripts/dpkg-genchanges.pl:
	Explicitely put Checksums-* fields before the Files field so that
	the Files field is last. This is a work-around for some braindead
	dsc parsers (dupload and sbuild for instance, see #473518 and
	#470440).

2008-04-01  Raphael Hertzog  <hertzog@debian.org>

	* scripts/Dpkg/Source/Package/V2_0.pm: Add the option
	--skip-patches to not apply patches at the end of the source
	package extraction. Also works for Format: 3.0 (quilt).