@@ -2,6 +2,8 @@ dpkg (1.14.18.1) UNRELEASED; urgency=low
 
   * Add missing import of subprocerr in Dpkg::Source::Package. Thanks to Sven
     Joachim for the patch.
+  * Handle symlinks better when deciding if dpkg-source has to copy the
+    original tarball in the current extraction directory. Closes: #475668
 
  -- Raphael Hertzog <hertzog@debian.org>  Sat, 12 Apr 2008 13:56:44 +0200
 
